# the-ledger

./: .env.example  .gitignore  DATA_GENERATION.md  DESIGN.md  DOMAIN_NOTES.md  Dockerfile  Makefile  NEXT_STEPS.md  README.md  apply_schema.py  check_data.py  check_montana.py  docker-compose.yml  pyproject.toml  requirements.txt
artifacts/: regulatory_package_NARR05.json
datagen/: __init__.py  company_generator.py  event_simulator.py  excel_generator.py  generate_all.py  pdf_generator.py  schema_validator.py
document_refinery/: __init__.py  pipeline.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  pdb.yaml  secret.yaml  service.yaml
ledger/: event_store.py  mcp_server.py  schema.sql  upcasters.py
load_gen/: run_concurrent.py
plans/: MASTER_IMPLEMENTATION_PLAN.md  implementation_gap_analysis.md  missing_artifacts_checklist.md  narrative_scenarios_implementation_plan.md
prometheus/: prometheus.yml  rules.yml
scripts/: demo_narr05.py  generate_cost_report.py  generate_narrative_test_results.py  generate_projection_lag_report.py  generate_test_results.py  migrate.py  run_pipeline.py  run_whatif.py
src/: event_store.py  logging_config.py  schema.sql
tests/: conftest.py  test_advanced_features.py  test_concurrency.py  test_event_store.py  test_extra_features.py  test_final_features.py  test_full_lifecycle_via_mcp.py  test_gas_town.py  test_integration.py  test_integrity.py  test_invariants.py  test_mcp_lifecycle.py  test_missing_coverage.py  test_narratives.py  test_new_features.py  test_projections.py  test_property_based.py  test_regulatory.py  (+3 more)
(+431 files in other folders)
