[project]
name = "apex-financial-event-store"
version = "0.1.0"
description = "Production-grade Event Sourcing infrastructure for AI agent loan processing"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]
